--- a/about/donate.qmd
+++ b/about/donate.qmd
@@ -4,18 +4,24 @@ title: "Donate"
 
 ### **lavaan is free**
 
-The lavaan package is free (as in beer) and open-source. We very much plan to keep it that way. But the [bus factor](https://en.wikipedia.org/wiki/Bus_factor) of the lavaan project is (currently) one, and the main developer (Yves Rosseel) finds it increasingly more difficult to find time to maintain (let alone further develop) lavaan.
+The lavaan package is free (as in beer) and open-source. We very much plan to
+keep it that way. But the [bus
+factor](https://en.wikipedia.org/wiki/Bus_factor) of the lavaan project is
+(currently) one, and the main developer (Yves Rosseel) finds it increasingly
+more difficult to find time to maintain (let alone further develop) lavaan.
 
-At the same time, the number of lavaan users continues to grow, and lavaan has become 'critical software' in many research domains.
+At the same time, the user base of lavaan is expanding rapidly, and lavaan has
+become 'critical software' in many research domains.
 
-This is not a sustainable situation, and we are looking for ways to hire more staff to support the lavaan project. One avenue is to ask for donations.
+This situation is inherently unsustainable, and we are looking for ways to hire
+more staff to support the lavaan project. One avenue is to ask for donations.
 
 ### **Donations**
 
 From 1 July 2023 onwards, it is possible to donate money to the lavaan project.
 The money will go to [Ghent University](https://www.ugent.be/schenken/en), and
-will be used exclusively to hire staff (at the post-doc level) that will
-support the lavaan project.
+will be used exclusively to hire qualified staff (at the post-doc level) that
+will support the lavaan project.
 
 At the end of the year, we will list all individuals/projects/businesses/organizations that have made a donation (unless they opt out) on this website.
 
@@ -36,6 +42,9 @@ Donations can be made using the following link (note: you will be redirected to 
 
 <form action="https://actieplatform.ugent.be/en-GB/p/lavaan-project/step-1" method="get" target="_blank"><button class="btn btn-outline-warning" type="submit">DONATE for lavaan</button></form><br>
 
+The following payment methods are available: Bancontact, VISA, iDEAL, 
+Maestro, Mastercard, Belfius Pay Button, KBC/CBC Pay Button.
+
 If you prefer using a bank transfer, please use the following details:
 
 -   Beneficiary: UNIVERSITEIT GENT
@@ -43,7 +52,9 @@ If you prefer using a bank transfer, please use the following details:
 -   Swift code (BIC): BBRUBEBB
 -   Bank reference: FWUGENTPP1226
 
-For more information about the donation process, tax certificates, etcetera, please contact the friendly people of the [University Fund](https://www.ugent.be/schenken/en/contact) of Ghent University.
+For more information about the donation process, tax certificates, etcetera,
+please contact the friendly people of the [University
+Fund](https://www.ugent.be/schenken/en/contact) of Ghent University.
 
 
 ### Research project/grant money 
