--- a/tutorial/cfa.qmd
+++ b/tutorial/cfa.qmd
@@ -52,7 +52,7 @@ In this example, the model syntax only contains three 'latent variable definitio
 latent variable =~ indicator1 + indicator2 + indicator3
 ```
 
-We call these expressions *latent variable definitions* because they define how the latent variables are 'indicated by' a set of (typically observed) variables, often called 'indicators'. Note that the special "`=~"` operator in the middle consists of a sign ("`=`") character and a tilde (`"~"`) character next to each other. The reason why this model syntax is so short, is that behind the scenes, the `cfa()` function will take care of several things. First, by default, the factor loading of the first indicator of a latent variable is fixed to 1, thereby fixing the scale of the latent variable. Second, residual variances are added automatically. And third, all exogenous latent variables are correlated by default. This way, the model syntax can be kept concise. On the other hand, the user remains in control, since all this 'default' behavior can be overriden and/or switched off.
+We call these expressions *latent variable definitions* because they define how the latent variables are 'indicated by' a set of (typically observed) variables, often called 'indicators'. Note that the special "`=~"` operator in the middle consists of a sign ("`=`") character and a tilde (`"~"`) character next to each other. The reason why this model syntax is so short, is that behind the scenes, the `cfa()` function will take care of several things. First, by default, the factor loading of the first indicator of a latent variable is fixed to 1, thereby fixing the scale of the latent variable. Second, residual variances are added automatically. And third, all exogenous latent variables are correlated by default. This way, the model syntax can be kept concise. On the other hand, the user remains in control, since all this 'default' behavior can be overridden and/or switched off.
 
 We can enter the model syntax using the single quotes:
 
@@ -92,7 +92,7 @@ The output consists of three parts. The first nine lines are called *the header*
 
 The next section contains additional fit measures, and is only shown because we use the optional argument `fit.measures = TRUE`. It starts with the line `Model Test Baseline Model:` and ends with the value for the `SRMR`. The last section contains the parameter estimates. It starts with (technical) information about the method that was used to compute the standard errors. (Most users can safely ignore this information). Then, it tabulates all free (and fixed) parameters that were included in the model. Typically, first the latent variables are shown, followed by covariances and (residual) variances. The first column (`Estimate`) contains the (estimated or fixed) parameter value for each model parameter; the second column (`Std.err`) contains the standard error for each estimated parameter; the third column (`Z-value`) contains the Wald statistic (which is simply obtained by dividing the parameter value by its standard error), and the last column (`P(>|z|)`) contains the p-value for testing the null hypothesis that the parameter value equals zero in the population.
 
-Note that in the `Variances:` section, there is a dot before the observed variables names. This is because they are dependent (or endogenous) variables (predicted by the latent variables), and therefore, the value for the variance that is printed in the output is an estimate of the residual variance: the left-over variance that is not explained by the predictor(s). By contrast, there is no dot before the latent variable names, because they are exogenous variables in this model (there are no single-headed arrows pointing to them). The values for the variances here are the estimated *total* variances of the latent variables.
+Note that in the `Variances:` section, there is a dot before the observed variables' names. This is because they are dependent (or endogenous) variables (predicted by the latent variables), and therefore, the value for the variance that is printed in the output is an estimate of the residual variance: the left-over variance that is not explained by the predictor(s). By contrast, there is no dot before the latent variable names, because they are exogenous variables in this model (there are no single-headed arrows pointing to them). The values for the variances here are the estimated *total* variances of the latent variables.
 
 To wrap up this first example, we summarize the complete code that was needed to fit this three-factor model:
 
