--- a/tutorial/groups.qmd
+++ b/tutorial/groups.qmd
@@ -20,7 +20,7 @@ fit <- cfa(HS.model,
 summary(fit)
 ```
 
-If you want to fix parameters, or provide starting values, you can use the same pre-multiplication techniques, but the single argument is now replaced by a *vector* of arguments, one for each group. If you use a single element instead of a vector (which is not recommended), that element will be applied for all groups. If you specify a single label, this will generate a warning as this would imply equality constraints across groups. For example:
+If you want to fix parameters or provide starting values, you can use the same pre-multiplication techniques, but the single argument is now replaced by a *vector* of arguments, one for each group. If you use a single element instead of a vector (which is not recommended), that element will be applied for all groups. If you specify a single label, this will generate a warning as this would imply equality constraints across groups. For example:
 
 ```{r tidy=FALSE, comment=""}
 HS.model <- ' visual  =~ x1 + 0.5*x2 + c(0.6, 0.8)*x3
@@ -28,7 +28,7 @@ HS.model <- ' visual  =~ x1 + 0.5*x2 + c(0.6, 0.8)*x3
               speed   =~ x7 + x8 + x9 '
 ```
 
-In the definition of the latent factor `visual`, we have fixed the factor loading of the indicator `x3` to the value '0.6' in the first group, and to the value '0.8' in the second group, while the factor loading of the indicator `x2` is fixed to the value '0.5' in both groups. In the definition of the `textual` factor, two different starting values are provided for the `x5` indicator; one for each group. In addition, we have labeled the factor loading of the `x6` indicator as `a1` in the first group, and `a2` in the second group. It may be tempting to write `a*x6`. But using a single label in a multiple group setting has a double effect: it gives the label `a` to the factor loading of `x6` in both groups, and as a result, those two parameters are now constrained to be equal. Because this may unintended, lavaan will produce a warning message about this. If this is really intended, it is much better to use a vector of labels: `c(a, a)*x6`.
+In the definition of the latent factor `visual`, we have fixed the factor loading of the indicator `x3` to the value '0.6' in the first group, and to the value '0.8' in the second group, while the factor loading of the indicator `x2` is fixed to the value '0.5' in both groups. In the definition of the `textual` factor, two different starting values are provided for the `x5` indicator; one for each group. In addition, we have labeled the factor loading of the `x6` indicator as `a1` in the first group, and `a2` in the second group. It may be tempting to write `a*x6`. But using a single label in a multiple group setting has a double effect: it gives the label `a` to the factor loading of `x6` in both groups, and as a result, those two parameters are now constrained to be equal. Because this may be unintended, lavaan will produce a warning message about this. If this is really intended, it is much better to use a vector of labels: `c(a, a)*x6`.
 
 To verify the effects of our modifiers, we refit the model:
 
@@ -81,7 +81,7 @@ The `.p2.`, `.p3.`, `.p5`, ... labels which appear in the output have been auto-
 -   `residuals`: the residual variances of the observed variables
 -   `residual.covariances`: the residual covariances of the observed variables
 -   `lv.variances`: the (residual) variances of the latent variables
--   `lv.covariances`: the (residual) covariances of the latent varibles
+-   `lv.covariances`: the (residual) covariances of the latent variables
 -   `regressions`: all regression coefficients in the model
 
 If you omit the `group.equal` argument, all parameters are freely estimated in each group (but the model structure is the same).
