Typo in est.qmd

--- a/tutorial/est.qmd
+++ b/tutorial/est.qmd
@@ -59,4 +59,4 @@ Robust standard errors can be requested explicitly by using `se = "robust"`. Sim
 
 ## Bootstrapping
 
-There are two ways to use the bootstrap in lavaan. Either you can set `se = "bootstrap"` or `test = "bootstrap"` when fitting the model (and you will get bootstrap standard errors, and/or a bootstrap-based p-value respectively), or you can you the `bootstrapLavaan()` function, which needs an already fitted lavaan object. The latter function can be used to 'bootstrap' any statistic (or vector of statistics) that you can extract from a fitted lavaan object.
+There are two ways to use the bootstrap in lavaan. Either you can set `se = "bootstrap"` or `test = "bootstrap"` when fitting the model (and you will get bootstrap standard errors, and/or a bootstrap-based p-value respectively), or you can use the `bootstrapLavaan()` function, which needs an already fitted lavaan object. The latter function can be used to 'bootstrap' any statistic (or vector of statistics) that you can extract from a fitted lavaan object.
